--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,20 @@ img {
 }
 
 button {
+  background-color: #3882F6;
+  color: #fff;
   width: 110px;
   padding: 8px 0;
   outline: none;
   cursor: pointer;
   font-family: "Roboto", sans-serif;
   border-radius: 8px;
+  border: none;
+}
 
+button:hover {
+  transform: scale(0.9);
+  transition: 0.5s ease;
 }
 
 .navbar {
@@ -104,14 +111,87 @@ button {
   margin: 10px 0;
 }
 
-.header button {
-  background-color: #3882F6;
-  border: none;
+
+/* Section => Product Features */
+
+.product-features h2 {
+  font-size: 28px;
+  font-weight: bolder;
+  margin: 15px 0;
+  text-align: center;
+}
+
+
+.product-features .boxes {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
   color: #fff;
 
 }
 
-.header button:hover {
-  transform: scale(0.9);
-  transition: 0.5s ease;
+.box {
+  background-color: #3882F6;
+  padding: 15px;
+  border-radius: 10px;
+  margin-left: 10px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6, );
+}
+
+.box img {
+  width: 30px;
+  margin-right: 5px;
+}
+
+span {
+  display: flex;
+  align-items: center;
+}
+
+.box p {
+  margin-top: 10px;
+  line-height: 1.3;
+}
+
+/* Section => Testimonial */
+.testimonial {
+  background-color: #E5E7EB;
+  padding: 50px 0;
+  margin: 50px 0;
+}
+
+.testimonial p {
+  font-size: 19px;
+  font-weight: 310;
+  font-style: italic;
+  color: #1F2937;
+  max-width: 500px;
+  margin: 0 auto;
+  line-height: 1.5;
+}
+
+.testimonial .client {
+  text-align: end;
+  margin-top: 8px;
+}
+
+/* Section => Call to Action */
+.action-call .container {
+  background-color: #3882F6;
+  width: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  border-radius: 5px;
+  margin-bottom: 50px;
+  min-height: 80px;
+  color: #FFF;
+  padding: 0 60px;
+  line-height: 1.2;
+}
+
+
+.action-call .container button {
+  border: 2px solid #fff;
 }
