--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  width: 1000px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 0 30px;
 }
@@ -27,7 +27,7 @@ img {
 button {
   background-color: #3882F6;
   color: #fff;
-  width: 110px;
+  min-width: 110px;
   padding: 8px 0;
   outline: none;
   cursor: pointer;
@@ -50,7 +50,7 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
+  min-height: 100%;
   padding-top: 8px;
 }
 
@@ -75,7 +75,7 @@ button:hover {
 }
 
 .navbar a:hover {
-  color: #fff;
+  color: #3882F6;
 }
 
 .header {
@@ -87,7 +87,8 @@ button:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .header img {
@@ -124,7 +125,6 @@ button:hover {
 
 .product-features .boxes {
   display: flex;
-  flex: 1;
   justify-content: space-between;
   color: #fff;
 
@@ -134,13 +134,13 @@ button:hover {
   background-color: #3882F6;
   padding: 15px;
   border-radius: 10px;
-  margin-left: 10px;
+  margin-left: 8px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6, );
 }
 
 .box img {
-  width: 30px;
-  margin-right: 5px;
+  max-width: 25px;
+  margin-right: 8px;
 }
 
 span {
@@ -156,7 +156,7 @@ span {
 /* Section => Testimonial */
 .testimonial {
   background-color: #E5E7EB;
-  padding: 50px 0;
+  padding: 50px;
   margin: 50px 0;
 }
 
@@ -178,7 +178,7 @@ span {
 /* Section => Call to Action */
 .action-call .container {
   background-color: #3882F6;
-  width: 800px;
+  max-width: 800px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -194,4 +194,86 @@ span {
 
 .action-call .container button {
   border: 2px solid #fff;
+}
+
+
+/* Footer */
+footer {
+  background: #1F2937;
+  text-align: center;
+  padding: 20px 0;
+  color: #fff;
+}
+
+
+@media(max-width:768px) {
+  button:hover {
+    transform: scale(1);
+  }
+
+  .navbar .container,
+  .header .container {
+    flex-direction: column;
+  }
+
+  .logo {
+    margin-bottom: 10px;
+  }
+
+  .header img {
+    max-width: 300px;
+    margin: 20px 0;
+  }
+
+  .header .hero-text {
+    order: 2;
+    text-align: center;
+    max-width: 400px;
+  }
+
+  .header .lead-text {
+    font-size: 38px;
+  }
+
+  .header .quote-text {
+    font-size: 16px;
+    margin: 12px 0;
+  }
+
+
+  /* Section => Product Features */
+
+  .product-features h2 {
+    font-size: 22px;
+  }
+
+
+  .product-features .boxes {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .box {
+    margin-bottom: 8px;
+  }
+
+
+  /* Section => Testimonial */
+  .testimonial {
+    padding: 20px 40px;
+    margin: 25px 0;
+  }
+
+  .testimonial p {
+    font-size: 16px;
+  }
+
+  /* Section => Call to Action */
+  .action-call .container {
+    max-width: 420px;
+    margin-bottom: 25px;
+    padding: 10px 25px;
+  }
+
 }
